--- a/css-friends-08/skeleton/08-thumbs.html
+++ b/css-friends-08/skeleton/08-thumbs.html
@@ -66,6 +66,18 @@
         <li><a href="#">Friends</a></li>
         <li><a href="#">Photos</a></li>
       </ul>
+      
+      <ul class="profile-friends">
+        <li><a href="#" class="thumb" title="Sennacy">
+          <img src="./images/cat.jpg" alt="">
+        </a></li>
+        <li><a href="#" class="thumb" title="Jonathan">
+          <img src="./images/cat.jpg" alt="">
+        </a></li>
+        <li><a href="#" class="thumb" title="Fred">
+          <img src="./images/cat.jpg" alt="">
+        </a></li>
+      </ul>
 
     </section>
     <section class="content-main">
